--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,6 @@
       manifest.json provides metadata used when your web app is added to the
       homescreen on Android. See https://developers.google.com/web/fundamentals/engage-and-retain/web-app-manifest/
     -->
-  <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
   <link rel="apple-touch-icon" sizes="180x180" href="%PUBLIC_URL%/apple-touch-icon.png">
   <link rel="icon" type="image/png" sizes="32x32" href="%PUBLIC_URL%/favicon-32x32.png">
   <link rel="icon" type="image/png" sizes="16x16" href="%PUBLIC_URL%/favicon-16x16.png">
@@ -16,7 +15,6 @@
   <link rel="mask-icon" href="%PUBLIC_URL%/safari-pinned-tab.svg" color="#1d7a8c">
   <meta name="msapplication-TileColor" content="#1d7a8c">
   <meta name="theme-color" content="#1d7a8c">
-
 
   <!--
       Notice the use of %PUBLIC_URL% in the tags above.
@@ -27,6 +25,11 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.1/css/all.css" integrity="sha384-5sAR7xN1Nv6T6+dT2mhtzEpVJvfS3NScPQTrOxhwjIuvcA67KV2R5Jz6kr4abQsz"
+    crossorigin="anonymous">
+
+
   <title>ADMIN - Press Express</title>
 </head>
 
