--- a/public/index.html
+++ b/public/index.html
@@ -25,10 +25,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-
-  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.1/css/all.css" integrity="sha384-5sAR7xN1Nv6T6+dT2mhtzEpVJvfS3NScPQTrOxhwjIuvcA67KV2R5Jz6kr4abQsz"
-    crossorigin="anonymous">
-
+  <script src="https://js.stripe.com/v3/"></script>
 
   <title>ADMIN - Press Express</title>
 </head>
@@ -38,6 +35,7 @@
     You need to enable JavaScript to run this app.
   </noscript>
   <div id="root"></div>
+  <div id="portal"></div>
   <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
