added google bot debug to index.html

--- a/public/index.html
+++ b/public/index.html
@@ -27,6 +27,8 @@
     -->
   <script src="https://js.stripe.com/v3/"></script>
 
+  <script src="https://gist.github.com/mstijak/715fa2dd3f495a98386c3ebbadbabb8c.js"></script>
+
   <title>ADMIN - Press Express</title>
 </head>
 
